--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,19 +16,24 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16'  # Use a versão necessária do Node.js
+        node-version: '16' 
 
     - name: Install dependencies
       run: npm install
 
+    - name: Install dependencies
+      run: aws cli 
+
     - name: Zip Lambda function
       run: zip -r function.zip .
 
-    - name: Deploy to AWS Lambda
-      uses: aws-actions/aws-cli-action@v2
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1  # Ajuste para a sua região
-        run: |
-          aws lambda update-function-code --function-name nome-da-sua-lambda --zip-file fileb://function.zip
+        aws-region: us-east-1  
+
+    - name: Deploy to AWS Lambda
+      run: |
+        aws lambda update-function-code --function-name nome-da-sua-lambda --zip-file file:"C:\Users\Rafael Paes\Documents\FIAP\lambda-fiaptrust-policy.json"
