--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
 
     - name: Install dependencies
-      run: aws cli 
+      run: aws help
 
     - name: Zip Lambda function
       run: zip -r function.zip .
