--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,9 @@ jobs:
     - name: Configurando as credentials
       uses: aws-actions/configure-aws-credentials@v3
       with:
-        aws-access-key-id: "ASIAWOWQJN7MBGVNOXYI"
-        aws-secret-access-key: "i4R8DH3D4YTKqHFULhGFCERMsYTLP7tEZ7ldkqm3"
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
         aws-region: us-east-1  
 
     - name: Deploy to AWS Lambda
