--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,5 @@ jobs:
         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
         aws-region: us-east-1  
 
-    - name: Deploy to AWS Lambda
-      run: |
-        aws lambda update-function-code --function-name lambda-fiap --zip-file file:"C:\Users\Rafael Paes\Documents\FIAP\lambda-fiaptrust-policy.json"
+    - name: Deploy do API Gateway
+      run: aws apigateway create-http-api --name "api-auth2" --description "Api Gateway para testes"
