--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,42 +36,4 @@ jobs:
         aws-region: us-east-1  
 
     - name: Deploy do API Gateway
-      run: name: Testes com Lambda
-
-on:
-  push:
-    branches:
-      - main  # Executa o deploy quando há push na branch main
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checando Repo
-      uses: actions/checkout@v3
-
-    - name: Set up do Node
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20' 
-
-    - name: NPM
-      run: npm install
-
-    - name: AWS Teste
-      run: aws help
-
-    - name: Zip Lambda function
-      run: zip -r function.zip .
-
-    - name: Configurando as credentials
-      uses: aws-actions/configure-aws-credentials@v3
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-        aws-region: us-east-1
-
-    - name: Deploy do API Gateway
-      run: aws apigateway create-http-api --name "api-auth2" --description "Api Gateway para testes 2"
+      run: aws apigateway create-http-api --name "api-auth2" --description "Api Gateway para testes"
