--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
           --zip-file fileb://lambda.zip \
           --timeout 10 \
           --memory-size 128 \
-          --role arn:aws:iam::123456789012:role/myRedshiftRole
+           --role arn:aws:iam::443892199384:role/LabInstanceProfile
 
     - name: Criar integração Lambda
       run: |
