--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,6 @@ jobs:
           --output text)
         echo "API_ID=$API_ID" >> $GITHUB_ENV
 
-      # Criar Lambda
     - name: Criar Lambda
       run: |
         aws lambda create-function \
@@ -68,14 +67,21 @@ jobs:
           --output text)
         echo "INTEGRATION_ID=$INTEGRATION_ID" >> $GITHUB_ENV          
 
-    # Criar rota GET /users/{userId}
-    - name: Criar rota GET /users/{cpf}
+    # Criar rota GET /users/
+    - name: Criar rota GET /users/
       run: |
         aws apigatewayv2 create-route \
           --api-id ${{ env.API_ID }} \
-          --route-key "GET /users/{cpf}" \
+          --route-key "GET /users" \
           --target integrations/${{ env.INTEGRATION_ID }}
-  
+
+    # Adicionar mapeamento de parâmetro
+    - name: Adicionar mapeamento de parâmetro
+      run: |
+        aws apigatewayv2 update-route \
+          --api-id ${{ env.API_ID }} \
+          --route-id $(aws apigatewayv2 get-routes --api-id ${{ env.API_ID }} --query "Items[?RouteKey=='GET /users'].RouteId" --output text) \
+          --request-parameters "querystring.cpf=true"
 
     # Criar a implementação e associar ao stage 'dev'
     - name: Criar deploy da API
@@ -97,4 +103,4 @@ jobs:
           --statement-id apigateway-access \
           --action lambda:InvokeFunction \
           --principal apigateway.amazonaws.com \
-          --source-arn arn:aws:execute-api:us-east-1:443892199384:${{ env.API_ID }}/*/GET/users/{userId}
+          --source-arn arn:aws:execute-api:us-east-1:443892199384:${{ env.API_ID }}/*/GET/users/*
