--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,21 +67,26 @@ jobs:
           --output text)
         echo "INTEGRATION_ID=$INTEGRATION_ID" >> $GITHUB_ENV          
 
-    # Criar rota GET /users/
-    - name: Criar rota GET /users/
+    # Criar rota GET /users
+    - name: Criar rota GET /users
       run: |
         aws apigatewayv2 create-route \
           --api-id ${{ env.API_ID }} \
           --route-key "GET /users" \
           --target integrations/${{ env.INTEGRATION_ID }}
 
-    # Adicionar mapeamento de parâmetro
+    # Adicionar mapeamento de parâmetro correto
     - name: Adicionar mapeamento de parâmetro
       run: |
+        ROUTE_ID=$(aws apigatewayv2 get-routes \
+          --api-id ${{ env.API_ID }} \
+          --query "Items[?RouteKey=='GET /users'].RouteId" \
+          --output text)
+          
         aws apigatewayv2 update-route \
           --api-id ${{ env.API_ID }} \
-          --route-id $(aws apigatewayv2 get-routes --api-id ${{ env.API_ID }} --query "Items[?RouteKey=='GET /users'].RouteId" --output text) \
-          --request-parameters "querystring.cpf=true"
+          --route-id $ROUTE_ID \
+          --request-parameters '{"querystring.cpf": {"Required": false}}'
 
     # Criar a implementação e associar ao stage 'dev'
     - name: Criar deploy da API
