--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,12 +67,12 @@ jobs:
           --output text)
         echo "INTEGRATION_ID=$INTEGRATION_ID" >> $GITHUB_ENV          
 
-    # Criar rota GET /users
-    - name: Criar rota GET /users
+    # Criar rota GET /users/{cpf}
+    - name: Criar rota GET /users/{cpf}
       run: |
         aws apigatewayv2 create-route \
           --api-id ${{ env.API_ID }} \
-          --route-key "GET /users" \
+          --route-key "GET /users/{cpf}" \
           --target integrations/${{ env.INTEGRATION_ID }}
 
     # Criar a implementação e associar ao stage 'dev'
