--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,18 +18,15 @@ jobs:
       with:
         node-version: '20'
 
-    - name: NPM Install
-      run: npm install
-
     - name: Exportar Secrets para Variáveis de Ambiente
       run: |
         echo "DB_USER=${{ secrets.DB_USER }}" >> $GITHUB_ENV
         echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
         echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
-   
-    - name: Instalar Dependências do MySQL
-      run: npm install mysql2
-      
+
+    - name: NPM Install com aws-sdk
+      run: npm install aws-sdk mysql2
+
     - name: Verificar AWS CLI
       run: aws --version
 
