--- a/.github/workflows/deploy_lambda.yml
+++ b/.github/workflows/deploy_lambda.yml
@@ -1,4 +1,4 @@
-name: Testes com Lambda
+name: Deploy Lambda
 
 on:
   push:
@@ -17,13 +17,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '20'
-
-    - name: Exportar Secrets para Variáveis de Ambiente
-      run: |
-        echo "DB_USER=${{ secrets.DB_USER }}" >> $GITHUB_ENV
-        echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
-        echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
-
+        
     - name: NPM Install
       run: npm install 
 
