--- a/.github/workflows/deploy_lambda.yml
+++ b/.github/workflows/deploy_lambda.yml
@@ -69,6 +69,7 @@ jobs:
           --timeout 10 \
           --memory-size 128 \
           --role arn:aws:iam::300254322294:role/LabRole
+          --environment Variables="us-east-1_n8dcY8my5"
 
     - name: Criar Integração Lambda getUser no API Gateway
       run: |
