--- a/package.json
+++ b/package.json
@@ -1,15 +1,107 @@
 {
-  "name": "lambda-fiap",
-  "version": "1.0.0",
-  "description": "none",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
+  "name": "order-system-ms-payments",
+  "version": "0.0.1",
+  "description": "",
   "author": "",
-  "license": "ISC",
+  "private": true,
+  "license": "UNLICENSED",
+  "scripts": {
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest -i",
+    "test:e2e": "jest --verbose -i /*.e2e.spec.ts",
+    "test:unit": "jest --verbose -i /*.unit.spec.ts",
+    "test:integration": "jest -i /*.integration.spec.ts",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "doc": "npx @compodoc/compodoc -p tsconfig.json -s",
+    "docker:up": "docker-compose up",
+    "docker:down": "docker-compose down",
+    "docker:build": "docker-compose up --build"
+  },
   "dependencies": {
-    "aws-sdk": "^2.814.0"
+    "@aws-sdk/client-dynamodb": "^3.693.0",
+    "@nestjs/axios": "^3.1.0",
+    "@nestjs/common": "^10.4.5",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.5",
+    "@nestjs/event-emitter": "^2.1.1",
+    "@nestjs/platform-express": "^10.4.5",
+    "@nestjs/swagger": "^7.4.2",
+    "axios": "^1.7.7",
+    "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "sqs-consumer": "^11.2.0"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^10.4.5",
+    "@nestjs/schematics": "^10.2.2",
+    "@nestjs/terminus": "^10.2.3",
+    "@nestjs/testing": "^10.4.5",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.8",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
+    "prettier": "^3.3.3",
+    "source-map-support": "^0.5.21",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.6.3"
+  },
+  "engines": {
+    "node": ">= 18"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": ["lcov", "text-summary"],
+    "coverageDirectory": "./coverage",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "moduleNameMapper": {
+      "src/(.*)": "<rootDir>/src/$1"
+    },
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "!src/main.ts",
+      "!src/swagger.ts",
+      "!src/Infrastructure/Guard/*.ts",
+      "!src/app.module.ts",
+      "!src/**/*.module.ts",
+      "!src/**/*.dto.ts",
+      "!src/**/*.interface.ts",
+      "!src/Presentation/Health/*.ts",
+      "!src/__test__/mock/*.ts"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "statements": 30,
+        "branches": 10,
+        "functions": 10,
+        "lines": 30
+      }
+    },
+    "detectOpenHandles": true,
+    "testEnvironment": "node",
+    "testTimeout": 2000000
   }
 }
