--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jest": "^29.0.0"
   },
   "jest": {
-    "testMatch": ["**/*.test.js"],
+    "testMatch": ["**/tests/**/*.test.js", "**/__tests__/**/*.test.js"],
     "testPathIgnorePatterns": ["/node_modules/"]
   }
 }
