--- a/.github/workflows/deploy_lambda.yml
+++ b/.github/workflows/deploy_lambda.yml
@@ -26,7 +26,7 @@ jobs:
         run: yarn add @aws-sdk/client-cognito-identity-provider jest
 
       - name: Run tests and coverage
-        run: NODE_OPTIONS="--unhandled-rejections=strict" yarn test:cov --runInBand
+        run: NODE_OPTIONS="--unhandled-rejections=strict" yarn test:cov --runInBand --detectOpenHandles
 
       - name: SonarQube Cloud Scan
         uses: SonarSource/sonarcloud-github-action@master
