--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
 sonar.projectKey=rafaelpaesss_VideoAuthentication
 sonar.organization=rafaelpaesss
-sonar.javascript.lcov.reportPaths=coverage/lcov-report/index.lcov
+sonar.javascript.lcov.reportPaths=coverage/lcov-report/index.html
